# study-misis

./: .gitignore  README.md
2nd semester/careerVKBot/: docker-compose.yml
2nd semester/careerVKBot/Code/: resume_generator.py
2nd semester/careerVKBot/Data/: resume_template.docx
2nd semester/careerVKBot/Data/Resumes/: generated_doc.docx
3rd semester/databases/Laboratory1/: ReportWORD.docx
3rd semester/databases/Laboratory2/: Triggers.pages
3rd semester/databases/Laboratory3/: DatabaseCreator.sql  ProcedureFunctionCreator.sql  Procedures.pages  Testing.sql
3rd semester/databases/Laboratory4/: CreateUsers.sql  TestSupplier.sql
3rd semester/databases/Test1/: SQLQueryTest.sql
3rd semester/databases/Test2/: DatabaseCreator.sql
3rd semester/zdravopit_cpp/app/: mainwindow.h
3rd semester/zdravopit_cpp/doc/: doxyfile.in
3rd semester/zdravopit_cpp/lib/model_utils/scripts/: PrepareModel.cmake  tf_text_graph_common.py
3rd semester/zdravopit_cpp/lib/qworker/: qworker.h
3rd semester/zdravopit_cpp/res/: CMakeLists.txt  MacOSXBundleInfo.plist.in  res_template.qrc
3rd semester/zdravopit_cpp/res/model/: labels.txt
4th semester/discrete_mathematics/labwork4/: main.cpp
4th semester/networks/LaboratoryWorks/: Labwork2.pkt  Labwork3.pkt  Labwork8.bak  Labwork8.pkt
4th semester/os/: КР Соседка Артём БПМ-18-2.doc
5th semester/numerical_methods/laboratory_work_1/: laboratory_work_1.docx  laboratory_work_1.ipynb
misc_cpp/colored-banknote/: CMakeLists.txt  README.md  main.cpp
misc_cpp/colored-banknote/cmake/: build_prefix.cmake
misc_cpp/drellipse/: CMakeLists.txt  README.md  main.cpp
misc_cpp/drellipse/cmake/: build_prefix.cmake
misc_cpp/histograms/: README.md  main.cpp
misc_cpp/histograms/doc/: CMakeLists.txt  doxyfile.in
misc_cpp/histograms/src/: CMakeLists.txt  histogram.cpp  histogram.h
misc_cpp/inter/backfore/: CMakeLists.txt  README.md  main.cpp  qa.cpp
misc_cpp/inter/fingernote/: CMakeLists.txt  README.md  main.cpp
misc_cpp/inter/mosaic_superpixels_final/: CMakeLists.txt  README.md  main.cpp
misc_cpp/inter/mosaic_superpixels_final/doc/: doxyfile.in
misc_cpp/inter/mosaic_superpixels_final/src/: CMakeLists.txt
misc_cpp/inter/mosaic_superpixels_final/src/mosaic/: CMakeLists.txt  mosaic.cpp  mosaic.h
misc_cpp/inter/mosaic_superpixels_final/src/superpixel/: CMakeLists.txt  superpixel.cpp  superpixel.h
misc_cpp/inter/mosaic_superpixels_final/src/tile_generator/: CMakeLists.txt  tilegen.cpp  tilegen.h
misc_cpp/marking/: CMakeLists.txt  README.md  main.cpp
misc_cpp/numnote/: CMakeLists.txt  README.md  main.cpp
misc_cpp/numnote/cmake/: build_prefix.cmake
misc_cpp/quality_mse/: README.md  main.cpp
misc_cpp/sosedka_a_v/: CMakeLists.txt  README.md
misc_cpp/sosedka_a_v/cmake/: config.cmake  macros.cmake
misc_cpp/sosedka_a_v/cmake/Modules/markdown_pdf/: markdown_pdf.cmake
misc_cpp/sosedka_a_v/prj.labs/: CMakeLists.txt
misc_cpp/sosedka_a_v/prj.labs/lab01/: CMakeLists.txt  main.cpp
misc_cpp/sosedka_a_v/prj.labs/lab02/: CMakeLists.txt  main.cpp
semester_2/careerVKBot/: Dockerfile  main.py  requirements.txt
semester_2/careerVKBot/Code/: sql_tools.py
semester_3/databases/Laboratory1/: ReportPAGES.pages  SQLQuery.sql
semester_3/databases/Laboratory2/: SQLQuery.sql
semester_3/databases/Laboratory3/: DataInsert.sql
semester_3/databases/Laboratory4/: TestAdmin.sql  TestCustomer.sql  UsersAndRoles.pages
semester_3/databases/Test2/: InsertData.sql  ProceduresCreator.sql  Test.sql
semester_3/zdravopit_cpp/: CMakeLists.txt
semester_3/zdravopit_cpp/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
semester_3/zdravopit_cpp/cmake/: build_prefix.cmake
semester_3/zdravopit_cpp/doc/: CMakeLists.txt
semester_3/zdravopit_cpp/lib/: CMakeLists.txt
semester_3/zdravopit_cpp/lib/model_utils/: CMakeLists.txt
semester_3/zdravopit_cpp/lib/model_utils/scripts/: DownloadModel.cmake  tf_text_graph_faster_rcnn.py  tf_text_graph_ssd.py
semester_3/zdravopit_cpp/lib/opencv/: CMakeLists.txt  object_detection.cpp  object_detection.h
semester_3/zdravopit_cpp/lib/qitembox/: CMakeLists.txt  qitembox.cpp  qitembox.h  qitembox.ui
semester_3/zdravopit_cpp/lib/qworker/: CMakeLists.txt  qworker.cpp
semester_3/zdravopit_cpp/res/model/: model.pbtxt  urls.txt
semester_4/discrete_mathematics/labwork1_1/: CMakeLists.txt  main.cpp
semester_4/discrete_mathematics/labwork1_2/: CMakeLists.txt  main.cpp
semester_4/discrete_mathematics/labwork4/: CMakeLists.txt
semester_4/networks/LaboratoryWorks/: Labwork1.pkt  Labwork4.pkt  Labwork5.pkt  Labwork6.pkt  Labwork6test.pkt  Labwork7.pkt  Labwork8.pkt
semester_4/os/: .ЛР1 Соседка Артём БПМ-18-2.doc.icloud  .ЛР2 Соседка Артём БПМ-18-2.doc.icloud  ЛР3 Соседка Артём БПМ-18-2.doc  ЛР4 Соседка Артём БПМ-18-2.doc  ЛР5 Соседка Артём БПМ-18-2.doc
semester_5/mathematical_modeling/: homework_1.docx  СОСЕДКА.docx  Соседка БПМ182 ДЗ1.docx  Соседка БПМ182 ДЗ2.docx
semester_5/numerical_methods/: Соседка-2-2.docx  Соседка-2-3.docx  Соседка-2-4.docx  Соседка-2-5.docx  Соседка-2-6.docx  Соседка-2-7.docx  Соседка-2-8.docx  Соседка-2-Итерации.docx  Соседка-2-Курсовая.docx  Тишин-2-Курсовая.docx
semester_5/numerical_methods/laboratory_work_1/: laboratory_work_1.docx  laboratory_work_1.ipynb  ~$boratory_work_1.docx
semester_6/seamless/: CMakeLists.txt  main.cpp
semester_7/ai/cursach/: analyze.py  app.py  readme.md  requirements.txt
semester_7/ai/labwork_1-2/: google.py
semester_7/stats/homework4/: task1.py  Задача №1 (задача о багаже).docx  Задача №2 (дисперсионный анализ).docx  Задача№3(нормальность распределения).docx  Задача№4(о нуклеотидной последовательности).docx  Задача№5(коэффициент корреляции).docx  Задача№6(регрессионная модель.NA).docx  Задача№7(логистическая регрессия).docx  Строим регрессионную модель.docx
